# aws-athena-mcp

./: .gitignore  README.md  pyproject.toml
src/mcp_server_aws_resources/: server.py
tests/: README.md  conftest.py  test_query_validation.py
tests/mcp_server_aws_resources/: test_server.py
