[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-aws-resources"
version = "0.1.0"
description = "MCP server for AWS resources using boto3"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "mcp",
    "pydantic",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mock>=5.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_aws_resources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose"
